--- a/src/pages/lightweight/Home.scss
+++ b/src/pages/lightweight/Home.scss
@@ -26,7 +26,7 @@
     transform: translate(-50%, 100vh);
     transition: transform 1s cubic-bezier(0.16, 1, 0.3, 1);
     width: clamp( 20rem, calc(100% - 32rem), 1440px);
-    height: clamp(200px, 100vh, 80rem);
+    height: clamp(200px, 80vh, 80rem);
     z-index: 2;
 
     @media (max-width: 1440px) {
@@ -46,7 +46,7 @@
   }
 
   .home-scene-container {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -55,7 +55,6 @@
     pointer-events: none;
     transform: translateY(100vh);
     transition: transform 1s cubic-bezier(0.16, 1, 0.3, 1);
-    //background-color: red;
 
     canvas {
       width: 100% !important;
